# PlayReadingParty

./: .babelrc  .gitignore  Cargo.toml  Dockerfile  README.md  characterData.js  db-setup-testdata.sql  db-setup.sql  dev.sh  index.js  jsdoc.json  openapi.yaml  package-lock.json  package.json  playData.js  podmanNotes.txt  postgresNotes.txt  run.sh  sqlx-data.json  start.sh  webpack.config.js
.github/workflows/: main.yml
databaseSetup/: db-setup.sql
deploy/: README.md  ansible.cfg  deploy.yaml  production  production.yaml  secret-vars.example.yaml
deploy/dns/: domain-ddns-update.service  domain-ddns-update.sh  domain-ddns-update.timer
migrations/: 20230704161236_initial.sql  20230716165311_read_position_to_float.sql
notes/: components.txt  copyOfDbCharacterSetup.txt  databaseStructure.txt  helpDesk.txt  ideation.txt  milligramOriginalColors.txt
playScript/: testPlay.txt  twelfth_night.txt
public/: index.html  index.js  main.js  style.css
public/css/: milligram.css  style.css
server/: actorController.js  controller.js  playData.js  scriptController.js  server.js
src/: App.js  App.jsx  Home.jsx  actors.rs  characters.rs  index.js  lib.rs  main.rs  playData.js  reading_dots.rs  script_parser.rs  server.js
src/components/: ActorColumn.jsx  ActorList.jsx  AddActor.jsx  Character.jsx  CharacterAssignment.jsx  DropColumn.jsx  ErrorPage.jsx  Header.jsx  Home.jsx  ReadingDots.jsx  Script.jsx  ScriptNav.jsx  UnassignedColumn.jsx  Upload.jsx  actorScriptButton.jsx  actorScriptNav.jsx  api.js  character.jsx  characterList.jsx  (+2 more)
tests/: actors.rs  get_actors.rs
(+24 files in other folders)
